Fix issues with long word dont wrap

--- a/blocks/edit/da-editor/da-editor.css
+++ b/blocks/edit/da-editor/da-editor.css
@@ -80,6 +80,14 @@
   box-shadow: rgb(181, 181, 181) 0px 0px 20px 0px;
   border-radius: 10px;
   z-index: 1;
+  overflow-wrap: anywhere;
+  white-space: break-spaces;
+  -webkit-font-variant-ligatures: none;
+  font-variant-ligatures: none;
+  font-feature-settings: "liga" 0;
+  hyphens: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
 }
 
 .ProseMirror-focused {
@@ -610,8 +618,7 @@ td.selectedCell {
 }
 
 .ProseMirror {
-  word-wrap: break-word;
-  white-space: pre-wrap;
+  overflow-wrap: anywhere;
   white-space: break-spaces;
   -webkit-font-variant-ligatures: none;
   font-variant-ligatures: none;
